Moved script directory to automation/js
Signed-off-by: Jonathan Gilbert <jpg@trillica.com>