@@ -12,8 +12,6 @@
  */
 package org.openhab.automation.jsscripting.internal;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -21,8 +19,6 @@ import javax.script.ScriptEngine;
 
 import org.openhab.core.automation.module.script.ScriptEngineFactory;
 import org.osgi.service.component.annotations.Component;
-
-import com.oracle.truffle.js.scriptengine.GraalJSEngineFactory;
 
 /**
  * An implementation of {@link ScriptEngineFactory} with customizations for GraalJS ScriptEngines.
@@ -32,15 +28,22 @@ import com.oracle.truffle.js.scriptengine.GraalJSEngineFactory;
 @Component(service = ScriptEngineFactory.class)
 public final class GraalJSScriptEngineFactory implements ScriptEngineFactory {
 
+    public static final String MIME_TYPE = "x-application/javascript.new";
+
     @Override
     public List<String> getScriptTypes() {
-        List<String> scriptTypes = new ArrayList<>();
-        GraalJSEngineFactory graalJSEngineFactory = new GraalJSEngineFactory();
 
-        scriptTypes.addAll(graalJSEngineFactory.getMimeTypes());
-        scriptTypes.addAll(graalJSEngineFactory.getExtensions());
+        /*
+         * Whilst we run in parallel with Nashorn, we use a custom mime-type to avoid
+         * disrupting Nashorn scripts. When Nashorn is removed, we take over the standard
+         * JS runtime.
+         */
 
-        return Collections.unmodifiableList(scriptTypes);
+        // GraalJSEngineFactory graalJSEngineFactory = new GraalJSEngineFactory();
+        // scriptTypes.addAll(graalJSEngineFactory.getMimeTypes());
+        // scriptTypes.addAll(graalJSEngineFactory.getExtensions());
+
+        return List.of(MIME_TYPE);
     }
 
     @Override
